--- a/creditList.html
+++ b/creditList.html
@@ -43,7 +43,7 @@
                     </div>
                 </div>
                 <div class="fr score_complaints">
-                    <p class="score">信用分<label class="redStyle">23</label></p>
+                    <p class="score">信用分：<label class="redStyle">23</label></p>
                     <p class="complaints">投诉 40</p>
                 </div>
             </div>
@@ -59,13 +59,13 @@
                     </div>
                 </div>
                 <div class="fr score_complaints">
-                    <p class="score">信用分<label class="redStyle">60</label></p>
+                    <p class="score">信用分：<label class="redStyle">60</label></p>
                     <p class="complaints">投诉 2</p>
                 </div>
             </div>
         </li>
         <li class="clearfix">
-            <div class="box clearfix">
+            <div class="box clearfix last_box">
                 <div class="fL clearfix">
                     <div class="fL num redStyle">3</div>
                     <div class="fr ListInfo">
@@ -74,7 +74,7 @@
                     </div>
                 </div>
                 <div class="fr score_complaints">
-                    <p class="score">信用分<label class="redStyle">43</label></p>
+                    <p class="score">信用分：<label class="redStyle">43</label></p>
                     <p class="complaints">投诉 0</p>
                 </div>
             </div>
@@ -94,7 +94,7 @@
                     </div>
                 </div>
                 <div class="fr score_complaints">
-                    <p class="score">信用分<label class="blackStyle">2</label></p>
+                    <p class="score">信用分：<label class="blackStyle">2</label></p>
                     <p class="complaints">投诉 200</p>
                 </div>
             </div>
@@ -110,13 +110,13 @@
                     </div>
                 </div>
                 <div class="fr score_complaints">
-                    <p class="score">信用分<label class="blackStyle">13</label></p>
+                    <p class="score">信用分：<label class="blackStyle">13</label></p>
                     <p class="complaints">投诉 100</p>
                 </div>
             </div>
         </li>
         <li class="clearfix">
-            <div class="box clearfix">
+            <div class="box clearfix last_box">
                 <div class="fL clearfix">
                     <div class="fL num">3</div>
                     <div class="fr ListInfo">
@@ -125,7 +125,7 @@
                     </div>
                 </div>
                 <div class="fr score_complaints">
-                    <p class="score">信用分<label class="blackStyle">3</label></p>
+                    <p class="score">信用分：<label class="blackStyle">3</label></p>
                     <p class="complaints">投诉 200</p>
                 </div>
             </div>
