--- a/ranking.html
+++ b/ranking.html
@@ -20,7 +20,7 @@
             <div class="fr"><i class="iconfont icon-tubiao- tu_btn"></i> <i class="iconfont icon-saoma tu_btn"></i></div>
         </div>
         <div class="rankingTop clearfix">
-            <div class="fL rankingtTitle">全部商户</div>
+            <div class="fL rankingtTitle" style="margin-left: .1rem;">全部商户</div>
             <div class="fr screening"><i class="iconfont icon-shaixuan tu_btn"></i> <label>筛选</label></div>
         </div>
     </div>
@@ -43,7 +43,7 @@
                     </div>
                 </div>
                 <div class="fr score_complaints">
-                    <p class="score">信用分<label>60</label></p>
+                    <p class="score">信用分：<label>60</label></p>
                     <p class="complaints">投诉 0</p>
                 </div>
             </div>
@@ -59,13 +59,13 @@
                     </div>
                 </div>
                 <div class="fr score_complaints">
-                    <p class="score">信用分<label>43</label></p>
+                    <p class="score">信用分：<label>43</label></p>
                     <p class="complaints">投诉 2</p>
                 </div>
             </div>
         </li>
         <li class="clearfix">
-            <div class="box clearfix">
+            <div class="box clearfix box_last">
                 <div class="fL clearfix">
                     <div class="fL num">3</div>
                     <div class="fr ListInfo">
@@ -74,14 +74,14 @@
                     </div>
                 </div>
                 <div class="fr score_complaints">
-                    <p class="score">信用分<label>23</label></p>
+                    <p class="score">信用分：<label>23</label></p>
                     <p class="complaints">投诉 40</p>
                 </div>
             </div>
         </li>
     </ul>
 
-     <!-- 黑榜 -->
+     <!-- 信用分升序 -->
      <ul class="black publicBox clearfix">
         <!-- 循环 -->
         <li class="clearfix">
@@ -94,7 +94,7 @@
                     </div>
                 </div>
                 <div class="fr score_complaints">
-                    <p class="score">信用分<label class="blackStyle">2</label></p>
+                    <p class="score">信用分：<label class="blackStyle">2</label></p>
                     <p class="complaints">投诉 200</p>
                 </div>
             </div>
@@ -110,13 +110,13 @@
                     </div>
                 </div>
                 <div class="fr score_complaints">
-                    <p class="score">信用分<label class="blackStyle">3</label></p>
+                    <p class="score">信用分：<label class="blackStyle">3</label></p>
                     <p class="complaints">投诉 200</p>
                 </div>
             </div>
         </li>
         <li class="clearfix">
-            <div class="box clearfix">
+            <div class="box clearfix box_last">
                 <div class="fL clearfix">
                     <div class="fL num">3</div>
                     <div class="fr ListInfo">
@@ -125,7 +125,7 @@
                     </div>
                 </div>
                 <div class="fr score_complaints">
-                    <p class="score">信用分<label class="blackStyle">13</label></p>
+                    <p class="score">信用分：<label class="blackStyle">13</label></p>
                     <p class="complaints">投诉 100</p>
                 </div>
             </div>
